--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,43 +1,46 @@
 ---
-import { Picture } from "@astrojs/image/components";
-import heroImage from "assets/hero.png";
-import Link from "@components/ui/link.astro";
 import { Icon } from "astro-icon";
+import { Picture } from "@astrojs/image/components";
+
+import Link from "@components/ui/link.astro";
+
+import heroImage from "images/oceanview.jpg";
+
 ---
 
-<main
-  class="grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24">
-  <div class="py-6 md:order-1 hidden md:block">
+<section
+  class="gap-16 grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24">
+  <div class="w-full order-1">
     <Picture
       src={heroImage}
-      alt="Astronaut in the air"
+      alt="Ocean view from back porch"
       widths={[200, 400, 600]}
       aspectRatio="4:3"
       sizes="(max-width: 800px) 100vw, 620px"
       loading="eager"
       format="avif"
+      class='w-full'
     />
   </div>
   <div>
     <h1
       class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
-      Marketing website done with Astro
+      Rentals furnished in a modern style.
     </h1>
     <p class="text-lg mt-4 text-slate-600 max-w-xl">
-      Astroship is a starter template for startups, marketing websites & landing
-      pages.<wbr /> Built with Astro.build and TailwindCSS. You can quickly create
-      any website with this starter.
+      Make yourself comfortable in our short-term rentals, complete with
+      hotel-like amenities and the conveniences of home. We accommodate both
+      business travelers and families.
     </p>
     <div class="mt-6 flex flex-col sm:flex-row gap-3">
       <Link
         href="#"
         href="https://web3templates.com/templates/astroship-starter-website-template-for-astro"
         target="_blank"
-        class="flex gap-1 items-center justify-center"
+        class="flex gap-2 items-center justify-center"
         rel="noopener">
-        <Icon class="text-white w-5 h-5" name="bx:bxs-cloud-download" />
-
-        Download for Free
+        <Icon class="invert w-5 h-5" name="calendar-plus" />
+        Book Rental
       </Link>
       <Link
         size="lg"
@@ -46,9 +49,9 @@ import { Icon } from "astro-icon";
         href="https://github.com/surjithctly/astroship"
         class="flex gap-1 items-center justify-center"
         target="_blank">
-        <Icon class="text-black w-4 h-4" name="bx:bxl-github" />
-        GitHub Repo
+        <Icon class="w-5 h-5" name="peace-hand" />
+        Get In Touch
       </Link>
     </div>
   </div>
-</main>
+</section>
