--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -16,23 +16,35 @@ import Contactform from "@components/contactform.astro";
 
     <div class="grid md:grid-cols-2 gap-10 mx-auto max-w-4xl mt-16">
       <div>
-        <h2 class="font-medium text-2xl text-gray-800">Contact Astroship</h2>
+        <h2 class="font-medium text-2xl text-gray-800">
+          Get in touch with us
+        </h2>
         <p class="text-lg leading-relaxed text-slate-500 mt-3">
-          Have something to say? We are here to help. Fill up the form or send
-          email or call phone.
+          Reach out to us if you need assistance or have any questions. We're
+          always here to help!
         </p>
         <div class="mt-5">
           <div class="flex items-center mt-2 space-x-2 text-gray-600">
-            <Icon class="text-gray-400 w-4 h-4" name="uil:map-marker" />
-            <span>1734 Sanfransico, CA 93063</span>
-          </div><div class="flex items-center mt-2 space-x-2 text-gray-600">
             <Icon class="text-gray-400 w-4 h-4" name="uil:envelope" /><a
-              href="mailto:hello@astroshipstarter.com"
-              >hello@astroshipstarter.com</a
+              href="mailto:me@juarri.com">me@juarri.com</a
             >
-          </div><div class="flex items-center mt-2 space-x-2 text-gray-600">
+          </div>
+
+          <div class="flex items-center mt-2 space-x-2 text-gray-600">
             <Icon class="text-gray-400 w-4 h-4" name="uil:phone" /><a
-              href="tel:+1 (987) 4587 899">+1 (987) 4587 899</a
+              href="tel:+1 (111) 1111 111">+1 (951) 201 0592</a
+            >
+          </div>
+
+          <div class="flex items-center mt-2 space-x-2 text-gray-600">
+            <Icon class="text-gray-400 w-4 h-4" name="uil:instagram" /><a
+              href="https://instagram.com/lascasas">@lascasas</a
+            >
+          </div>
+
+          <div class="flex items-center mt-2 space-x-2 text-gray-600">
+            <Icon class="text-gray-400 w-4 h-4" name="uil:facebook" /><a
+              href="https://facebook.com/lascasas">@lascasas</a
             >
           </div>
         </div>
