--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -9,7 +9,7 @@ import heroImage from "images/oceanview.jpg";
 ---
 
 <section
-  class="gap-16 grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24">
+  class="gap-16 grid lg:grid-cols-2 place-items-center pt-12 pb-8 md:pb-24">
   <div class="w-full order-1">
     <Picture
       src={heroImage}
