--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,7 +3,8 @@ import { getCollection } from "astro:content";
 import { Picture } from "@astrojs/image/components";
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
-import Sectionhead from "@components/sectionhead.astro";
+
+import heroImage from "images/sweeping.jpg";
 
 // Filter team entries with 'draft: false' & date before current date
 const publishedTeamMembers = await getCollection("team", ({ data }) => {
@@ -13,10 +14,7 @@ const publishedTeamMembers = await getCollection("team", ({ data }) => {
 
 <Layout title="About">
   <Container>
-    <Sectionhead>
-      <Fragment slot="title">About</Fragment>
-      <Fragment slot="desc">We are a small passionate team.</Fragment>
-    </Sectionhead>
+    <h1 class="sr-only">About</h1>
 
     <div class="flex flex-col gap-3 mx-auto max-w-4xl mt-16">
       <h2 class="font-bold text-3xl text-gray-800">Mission Statement</h2>
