--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,13 +35,13 @@ const makeTitle = title
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="generator" content={Astro.generator} />
 
     <!-- <link rel="preload" as="image" href={src} alt="Hero" /> -->
     <SEO
       title={makeTitle}
-      description="Astroship is a starter website template for Astro built with TailwindCSS."
+      description="Make yourself comfortable in our short-term rentals, complete with hotel-like amenities and the conveniences of home. We accommodate both business travelers and families."
       canonical={canonicalURL}
       openGraph={{
         basic: {
