--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,7 +16,7 @@ const publishedTeamMembers = await getCollection("team", ({ data }) => {
   <Container>
     <h1 class="sr-only">About</h1>
 
-    <div class="flex flex-col gap-3 mx-auto max-w-4xl mt-16">
+    <div class="flex flex-col gap-3 mx-auto max-w-4xl mt-12 sm:mt-16">
       <h2 class="font-bold text-3xl text-gray-800">Mission Statement</h2>
       <p class="text-lg leading-relaxed text-slate-500">
         Our mission is to provide safe, comfortable, and affordable short-term
@@ -25,8 +25,8 @@ const publishedTeamMembers = await getCollection("team", ({ data }) => {
         prosperity of the neighborhoods in which we operate. We strive to
         continuously innovate and enhance the guest experience through seamless
         technology, personalized service, and a commitment to sustainability.
-        Our ultimate goal is to create meaningful and unforgettable stays for
-        every guest, making their travels effortless and enjoyable.
+        Our ultimate goal is to create meaningful and memorable stays for every
+        guest, making their travels effortless and enjoyable.
       </p>
     </div>
 
@@ -36,13 +36,13 @@ const publishedTeamMembers = await getCollection("team", ({ data }) => {
         Las Casas will offer a range of short-term rental properties, including
         apartments, condominiums, and houses. All of our properties will be
         fully furnished and equipped with modern amenities, including high-speed
-        internet, televisions, and fully equipped kitchens. Our properties will
-        also be professionally cleaned and maintained, ensuring that they are
-        always in top condition for our guests. Additionally, we will offer 24/7
-        customer support to assist our guests with any needs or concerns that
-        may arise during their stay. Our target market will be business
-        travelers and tourists, and we will be based in a prime location in the
-        city center to maximize visibility and accessibility.
+        internet, televisions, and kitchens stocked with basic essentials. Our
+        properties will also be professionally cleaned and maintained, ensuring
+        that they are always in top condition for our guests. Additionally, we
+        will offer 24/7 delete customer support to assist our guests with any
+        needs or concerns that may arise during their stay. Our target market
+        will be business travelers and tourists, and we will be based in a prime
+        location in the city center to maximize visibility and accessibility.
       </p>
     </div>
 
