--- a/src/pages/faq.astro
+++ b/src/pages/faq.astro
@@ -8,34 +8,29 @@ import sweepingImage from "../images/sweeping.jpg";
 
 const faq = [
   {
-    question: "adkajs jsadlk jasdklj askjdl aslkjd kas?",
+    question: "How does it work?",
     answer:
-      "askldj sakdj kalsdj alsdjasdklj. asdhjsdhsd dsahgd asd ghsad ashd gas gjas djg. sadg jsadg jshagd jashag jdshg jgdj shdgashgd.",
+      "After the lease with added amendment is signed, the home is then set up to highest of standards to make guests feel safe and comfortable. We then do bookings directly from our website and market on third-party short-term rental sites.",
   },
   {
-    question: "adkajs jsadlk jasdklj askjdl aslkjd kas?",
+    question: "Do guest get screened?",
     answer:
-      "askldj sakdj kalsdj alsdjasdklj. asdhjsdhsd dsahgd asd ghsad ashd gas gjas djg. sadg jsadg jshagd jashag jdshg jgdj shdgashgd.",
+      "Yes! We require identity verification and screening before every reservation.",
   },
   {
-    question: "adkajs jsadlk jasdklj askjdl aslkjd kas?",
+    question: "Who do we host?",
     answer:
-      "askldj sakdj kalsdj alsdjasdklj. asdhjsdhsd dsahgd asd ghsad ashd gas gjas djg. sadg jsadg jshagd jashag jdshg jgdj shdgashgd.",
+      "Our guests vary from business professionals, traveling nurses, short-term tourist.",
   },
   {
-    question: "adkajs jsadlk jasdklj askjdl aslkjd kas?",
+    question: "Is the home professionally cleaned?",
     answer:
-      "askldj sakdj kalsdj alsdjasdklj. asdhjsdhsd dsahgd asd ghsad ashd gas gjas djg. sadg jsadg jshagd jashag jdshg jgdj shdgashgd.",
+      "Yes! We pride on having pristine homes that are professionally cleaned immediately after each guest.",
   },
   {
-    question: "adkajs jsadlk jasdklj askjdl aslkjd kas?",
+    question: "What amenities are included?",
     answer:
-      "askldj sakdj kalsdj alsdjasdklj. asdhjsdhsd dsahgd asd ghsad ashd gas gjas djg. sadg jsadg jshagd jashag jdshg jgdj shdgashgd.",
-  },
-  {
-    question: "adkajs jsadlk jasdklj askjdl aslkjd kas?",
-    answer:
-      "askldj sakdj kalsdj alsdjasdklj. asdhjsdhsd dsahgd asd ghsad ashd gas gjas djg. sadg jsadg jshagd jashag jdshg jgdj shdgashgd.",
+      "We provide complimentary WiFi, fresh linens and towels, hotel toiletries, work space, easy self check-in, kitchen stocked with basic essentials, and smart TVs.",
   },
 ];
 ---
@@ -83,7 +78,7 @@ const faq = [
           </div>
 
           <a
-            href=""
+            href="/contact"
             class="whitespace-nowrap rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 px-5 py-2.5 bg-black text-white hover:bg-gray-800 border-2 border-transparent inline-flex gap-1 items-center justify-center"
           >
             <Icon name="peace-hand" class="invert w-5 mr-2" />
