--- a/src/components/header/header.astro
+++ b/src/components/header/header.astro
@@ -1,8 +1,13 @@
 ---
+import { Image, Picture } from '@astrojs/image/components';
+
+import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
+import Dropdown from "./dropdown.astro";
+
 import Container from "@components/container.astro";
 import Link from "@components/ui/link.astro";
-import Dropdown from "./dropdown.astro";
-import { Astronav, MenuItems, MenuIcon } from "astro-navbar";
+
+import logo from "../../images/las-casas-logo.png";
 
 const menuitems = [
   // {
@@ -38,19 +43,18 @@ const menuitems = [
 ---
 
 <Container>
-  <header class="flex flex-col lg:flex-row justify-between items-center my-5">
+  <header class="flex flex-col lg:flex-row justify-between items-center my-7 sm:my-8">
     <Astronav>
       <div class="flex w-full lg:w-auto items-center justify-between">
         <a href="/" class="text-lg">
-          <span class="text-slate-500">Las</span>
-          <span class="font-bold text-slate-800">Casas</span>
+          <Image src={logo} alt="Las Casas Logo" class="w-28" />
         </a>
         <div class="block lg:hidden">
-          <MenuIcon class="w-4 h-4 text-gray-800" />
+          <MenuIcon class="w-5 h-5 text-gray-800" />
         </div>
       </div>
-      <MenuItems class="hidden w-full lg:w-auto mt-2 lg:flex lg:mt-0">
-        <ul class="flex flex-col lg:flex-row lg:gap-3">
+      <MenuItems class="hidden w-full lg:w-auto mt-8 lg:flex lg:mt-0">
+        <ul class="flex flex-col lg:flex-row lg:gap-3 items-center">
           {
             menuitems.map((item, index) => (
               <>
