--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -34,8 +34,7 @@ import heroImage from "images/oceanview.jpg";
     </p>
     <div class="mt-6 flex flex-col sm:flex-row gap-3">
       <Link
-        href="#"
-        href="https://web3templates.com/templates/astroship-starter-website-template-for-astro"
+        href="/"
         target="_blank"
         class="flex gap-2 items-center justify-center"
         rel="noopener">
@@ -46,7 +45,7 @@ import heroImage from "images/oceanview.jpg";
         size="lg"
         style="outline"
         rel="noopener"
-        href="https://github.com/surjithctly/astroship"
+        href="/contact"
         class="flex gap-1 items-center justify-center"
         target="_blank">
         <Icon class="w-5 h-5" name="peace-hand" />
