--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,6 +1,6 @@
 <footer class="my-20">
   <p class="text-center text-sm text-slate-500 leading-tighter">
-    Copyright © {new Date().getFullYear()} LAS CASAS STR LLC. 
+    Copyright © {new Date().getFullYear()} LAS CASAS STR LLC
     <br></br>All rights reserved.
   </p>
 </footer>
