--- a/src/components/header/header.astro
+++ b/src/components/header/header.astro
@@ -24,16 +24,16 @@ const menuitems = [
     path: "/about",
   },
   {
-    title: "Book",
-    path: "/book",
+    title: "Partner",
+    path: "/partner",
+  },
+  {
+    title: "Stay",
+    path: "/stay",
   },
   {
     title: "Contact",
     path: "/contact",
-  },
-  {
-    title: "Partner",
-    path: "/partner",
   },
   {
     title: "FAQ",
