--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -15,7 +15,7 @@ const publishedTeamMembers = await getCollection("team", ({ data }) => {
     <h1 class="sr-only">About</h1>
 
     <div class="flex flex-col gap-3 mx-auto max-w-4xl mt-12 sm:mt-16">
-      <h2 class="font-bold text-3xl text-gray-800">Mission Statement</h2>
+      <h2 class="font-bold text-3xl text-gray-800 sr-only">Mission Statement</h2>
       <p class="text-lg leading-relaxed text-slate-500">
         Our mission is to provide safe, comfortable, and affordable short-term
         rental accommodations that exceed the expectations of our guests,
@@ -28,10 +28,8 @@ const publishedTeamMembers = await getCollection("team", ({ data }) => {
         goal is to create meaningful and memorable stays for every guest, making
         their travels effortless and enjoyable.
       </p>
-    </div>
 
-    <div class="flex flex-col gap-3 mx-auto max-w-4xl mt-12">
-      <h2 class="font-bold text-3xl text-gray-800">Business Description</h2>
+      <h2 class="font-bold text-3xl text-gray-800 sr-only">Business Description</h2>
       <p class="text-lg leading-relaxed text-slate-500">
         Las Casas will offer a range of short-term rental properties, including
         apartments, condominiums, and houses. All of our properties will be
@@ -45,5 +43,6 @@ const publishedTeamMembers = await getCollection("team", ({ data }) => {
         location in the city center to maximize visibility and accessibility.
       </p>
     </div>
+
   </Container>
 </Layout>
