--- a/src/pages/partner.astro
+++ b/src/pages/partner.astro
@@ -20,7 +20,7 @@ const points = [
   {
     icon: "emoji-satisfied",
     title: "Million dollar insurance policy",
-    points: ["No worries about finding qualified tenants"],
+    points: [],
   },
   {
     icon: "chat-lines",
