--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -5,7 +5,6 @@ import { Picture } from "@astrojs/image/components";
 import Link from "@components/ui/link.astro";
 
 import heroImage from "images/oceanview.jpg";
-
 ---
 
 <section
@@ -19,7 +18,7 @@ import heroImage from "images/oceanview.jpg";
       sizes="(max-width: 800px) 100vw, 620px"
       loading="eager"
       format="avif"
-      class='w-full'
+      class="w-full"
     />
   </div>
   <div>
