--- a/src/pages/faq.astro
+++ b/src/pages/faq.astro
@@ -20,7 +20,7 @@ const faq = [
   {
     question: "Who do we host?",
     answer:
-      "Our guests vary from business professionals, traveling nurses, short-term tourist.",
+      "Our guests vary from business professionals, traveling nurses, vacation tourist.",
   },
   {
     question: "Is the home professionally cleaned?",
@@ -71,7 +71,7 @@ const faq = [
             <div class="text-center sm:text-left">
               <h2 class="font-bold text-lg">Still have questions?</h2>
               <p class="">
-                Can't find the answer your looking for? Please contact our
+                Can't find the answer you're looking for? Please contact our
                 friendly team.
               </p>
             </div>
