--- a/src/pages/partner.astro
+++ b/src/pages/partner.astro
@@ -138,7 +138,7 @@ const safety = [
           {
             safety.map((point) => (
               <div class="flex gap-4 items-start">
-                <div class="mt-1 bg-black rounded-full  p-2 w-8 h-8 shrink-0">
+                <div class="mt-1 bg-black rounded-full  p-2 w-8 h-8 ssrink-0">
                   <Icon name={point.icon} class="invert" />
                 </div>
                 <div>
