--- a/src/pages/faq.astro
+++ b/src/pages/faq.astro
@@ -20,7 +20,7 @@ const faq = [
   {
     question: "Who do we host?",
     answer:
-      "Our guests vary from business professionals, traveling nurses, vacation tourist.",
+      "Our guests vary from business professionals, traveling nurses, destination travelers and insurance claimants.",
   },
   {
     question: "Is the home professionally cleaned?",
@@ -30,7 +30,7 @@ const faq = [
   {
     question: "What amenities are included?",
     answer:
-      "We provide complimentary WiFi, fresh linens and towels, hotel toiletries, work space, easy self check-in, kitchen stocked with basic essentials, and smart TVs.",
+      "We provide complimentary WiFi, fresh linens and towels, hotel toiletries, work space, easy self check-in, kitchen stocked with basic essentials, coffee, and smart TVs.",
   },
 ];
 ---
