--- a/src/components/contactform.astro
+++ b/src/components/contactform.astro
@@ -105,7 +105,7 @@ import Button from "./ui/button.astro";
         let json = await response.json();
         if (response.status == 200) {
           result.classList.add("text-green-500");
-          result.innerHTML = json.message;
+          result.innerHTML = "Thank you, your email has been sent. We will get back to you as soon as we can.";
         } else {
           console.log(response);
           result.classList.add("text-red-500");
