--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -15,7 +15,9 @@ const publishedTeamMembers = await getCollection("team", ({ data }) => {
     <h1 class="sr-only">About</h1>
 
     <div class="flex flex-col gap-3 mx-auto max-w-4xl mt-12 sm:mt-16">
-      <h2 class="font-bold text-3xl text-gray-800 sr-only">Mission Statement</h2>
+      <h2 class="font-bold text-3xl text-gray-800 sr-only">
+        Mission Statement
+      </h2>
       <p class="text-lg leading-relaxed text-slate-500">
         Our mission is to provide safe, comfortable, and affordable short-term
         rental accommodations that exceed the expectations of our guests,
@@ -29,20 +31,20 @@ const publishedTeamMembers = await getCollection("team", ({ data }) => {
         their travels effortless and enjoyable.
       </p>
 
-      <h2 class="font-bold text-3xl text-gray-800 sr-only">Business Description</h2>
+      <h2 class="font-bold text-3xl text-gray-800 sr-only">
+        Business Description
+      </h2>
       <p class="text-lg leading-relaxed text-slate-500">
         Las Casas will offer a range of short-term rental properties, including
         apartments, condominiums, and houses. All of our properties will be
         uniquely furnished and equipped with modern amenities, including
-        high-speed internet, televisions, and kitchens stocked with basic essentials. Our properties will also be professionally cleaned and
+        high-speed internet, televisions, and kitchens stocked with basic
+        essentials. Our properties will also be professionally cleaned and
         maintained, ensuring that they are always in top condition for our
         guests. Additionally, we will offer 24/7 support to assist our guests
-        with any needs or concerns that may arise during their stay. Our target
-        market will be traveling nurses, business professionals, insurance
-        claimants, and vacation travelers, and we will be based in a prime
-        location in the city center to maximize visibility and accessibility.
+        with any needs or concerns that may arise during their stay. We will be
+        based close to the city center to maximize visibility and accessibility.
       </p>
     </div>
-
   </Container>
 </Layout>
