--- a/src/pages/partner.astro
+++ b/src/pages/partner.astro
@@ -114,7 +114,7 @@ const safety = [
           {
             safety.map((point) => (
               <div class="flex gap-4 items-start">
-                <div class="mt-1 bg-black rounded-full  p-2 w-8 h-8 ssrink-0">
+                <div class="mt-1 bg-black rounded-full  p-2 w-8 h-8 shrink-0">
                   <Icon name={point.icon} class="invert" />
                 </div>
                 <div>
@@ -125,7 +125,6 @@ const safety = [
             ))
           }
         </div>
-
 
         <h2 class="mt-12 mb-10 font-bold text-2xl">Landlord Benefits</h2>
 
